fixed main div collapse

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -12,6 +12,7 @@ main {
   padding: 1em;
   margin: auto;
   width: 80%;
+  overflow: hidden;
 }
 
 #content {
